# lidartald

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  deploy-production.yml  deploy-staging.yml  security-scan.yml  web-ci.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/: README.md
infrastructure/helm/monitoring/elasticsearch/: values.yaml
infrastructure/helm/monitoring/fluentd/: values.yaml
infrastructure/helm/monitoring/grafana/: values.yaml
infrastructure/helm/monitoring/kibana/: values.yaml
infrastructure/helm/monitoring/prometheus/: values.yaml
infrastructure/helm/security/cert-manager/: values.yaml
infrastructure/helm/security/oauth2-proxy/: values.yaml
infrastructure/helm/security/vault/: values.yaml
infrastructure/helm/tald-unia/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
infrastructure/helm/tald-unia/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
infrastructure/scripts/: backup-database.sh  deploy-monitoring.sh  deploy-security.sh  init-cluster.sh  rotate-secrets.sh
infrastructure/terraform/aws/: cloudfront.tf  cognito.tf  eks.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  rds.tf  route53.tf  s3.tf  variables.tf  vpc.tf
infrastructure/terraform/environments/production/: main.tf  terraform.tfvars
infrastructure/terraform/environments/staging/: main.tf  terraform.tfvars
infrastructure/terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/security/: main.tf  outputs.tf  variables.tf
src/backend/: .dockerignore  .env.example  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  rust-toolchain.toml  tsconfig.json
src/backend/api/src/middleware/: error-handler.ts  rate-limiter.ts
src/backend/api/src/routes/v1/: fleet.routes.ts  lidar.routes.ts  session.routes.ts  user.routes.ts
src/backend/api/src/swagger/: openapi.yaml
src/backend/api/src/validators/: fleet.validator.ts  user.validator.ts
src/backend/api/tests/: routes.test.ts
src/backend/database/: schema.prisma
src/backend/database/migrations/: 001_init_schema.sql  002_user_profiles.sql  003_fleet_tables.sql  004_session_tables.sql
src/backend/database/seeds/: test_data.sql
src/backend/fleet_manager/: Cargo.toml
src/backend/fleet_manager/src/: discovery.rs  error.rs  lib.rs  mesh.rs  session.rs  sync.rs
src/backend/fleet_manager/tests/: discovery_test.rs  mesh_test.rs
src/backend/game_engine/: CMakeLists.txt
src/backend/game_engine/include/: game_core.hpp  physics.hpp  renderer.hpp  state_manager.hpp
src/backend/game_engine/shaders/: environment.frag.spv  environment.vert.spv
src/backend/game_engine/src/: game_core.cpp  physics.cpp  renderer.cpp  state_manager.cpp
src/backend/game_engine/tests/: game_core_test.cpp
src/backend/k8s/: database.yaml  fleet-manager.yaml  game-engine.yaml  ingress.yaml  lidar-core.yaml  redis.yaml  social-engine.yaml
src/backend/lidar_core/: CMakeLists.txt
src/backend/lidar_core/include/: feature_detector.hpp  lidar_processor.hpp  point_cloud.hpp  surface_classifier.hpp
src/backend/lidar_core/src/: feature_detector.cpp  lidar_processor.cpp  point_cloud.cpp  surface_classifier.cpp
src/backend/lidar_core/tests/: lidar_processor_test.cpp  point_cloud_test.cpp
src/backend/monitoring/: alerts.yml  prometheus.yml
src/backend/monitoring/grafana-dashboards/: fleet-metrics.json  lidar-metrics.json
src/backend/scripts/: build.sh  db-migrate.sh  deploy.sh  test.sh
src/backend/security/src/: encryption.ts  jwt.ts  oauth.ts  rbac.ts
src/backend/security/tests/: security.test.ts
src/backend/social_engine/src/: app.ts  server.ts
src/backend/social_engine/src/config/: database.ts  redis.ts  websocket.ts
src/backend/social_engine/src/controllers/: fleet.controller.ts  session.controller.ts  user.controller.ts
src/backend/social_engine/src/middleware/: auth.middleware.ts  validation.middleware.ts
src/backend/social_engine/src/models/: fleet.model.ts  session.model.ts  user.model.ts
src/backend/social_engine/src/services/: auth.service.ts  fleet.service.ts  matching.service.ts
src/backend/social_engine/src/types/: fleet.types.ts  session.types.ts  user.types.ts
src/backend/social_engine/tests/: fleet.test.ts  user.test.ts
src/web/: .eslintrc.ts  .prettierrc  README.md  cypress.config.ts  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/cypress/e2e/: fleet.cy.ts  game.cy.ts  lidar.cy.ts  social.cy.ts
src/web/cypress/fixtures/: fleetData.json  pointCloud.json  userData.json
src/web/cypress/support/: commands.ts
src/web/src/: App.tsx  index.tsx  vite-env.d.ts
src/web/src/__tests__/hooks/: useLidarScanner.test.ts
src/web/src/__tests__/utils/: pointCloud.test.ts
src/web/src/api/: environmentApi.ts  fleetApi.ts  gameApi.ts  lidarApi.ts  userApi.ts  websocketApi.ts
src/web/src/assets/icons/: index.ts
src/web/src/assets/images/: index.ts
src/web/src/components/common/: Alert.tsx  Button.tsx  Input.tsx  Loading.tsx  Modal.tsx  Select.tsx
src/web/src/components/fleet/: DeviceList.tsx  FleetManager.tsx  (+2 more)
src/web/src/config/: api.ts  constants.ts  environment.ts  websocket.ts
src/web/src/hooks/: useEnvironmentMap.ts  useFleetConnection.ts  useGameSession.ts  useLidarScanner.ts  usePointCloud.ts  useWebSocket.ts
src/web/src/pages/: Dashboard.tsx  EnvironmentScanner.tsx  FleetMode.tsx  GamingMode.tsx  Settings.tsx  SocialMode.tsx
src/web/src/store/: index.ts
src/web/src/styles/: animations.ts  components.ts  global.css  theme.ts
src/web/src/types/: environment.types.ts  fleet.types.ts  game.types.ts  lidar.types.ts  user.types.ts  websocket.types.ts
src/web/src/utils/: environmentMapping.ts  gameState.ts  meshNetwork.ts  pointCloud.ts  validation.ts  websocket.ts
(+27 files in other folders)
