# TALD UNIA Backend Workspace
# Version: 0.1.0
# Rust Edition: 2021
# Minimum Rust Version: 1.70

[workspace]
members = [
    "fleet_manager",
    "lidar_core",
    "social_engine", 
    "security",
    "api_service",
    "mesh_network",
    "game_state",
    "environment_processor"
]
resolver = "2"

[package]
name = "tald-unia-backend"
version = "0.1.0"
edition = "2021"
authors = ["TALD UNIA Development Team"]
description = "Backend services for the TALD UNIA LiDAR-enabled gaming platform"
license = "Proprietary"
repository = "internal/tald-unia/backend"
documentation = "docs/backend"
keywords = ["lidar", "gaming", "mesh-network", "fleet-management", "distributed-systems"]
categories = ["games", "hardware-support", "network-programming"]
rust-version = "1.70"
publish = false

[build-dependencies]
cmake = { version = "0.1", features = ["build"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TALD UNIA Development Team"]
license = "Proprietary"
repository = "internal/tald-unia/backend"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.28", features = ["full"] }
# Networking
libp2p = "0.45"
webrtc = "0.7"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
redis = { version = "0.23", features = ["tokio-comp"] }
# Security
ring = "0.16"
rustls = "0.21"
# Testing
mockall = "0.11"
criterion = "0.5"
# Metrics
prometheus = "0.13"
metrics = "0.21"